@@ -1,3 +1,8 @@
+2009-01-23  Callum McKenzie  <callum@spooky-possum.org>
+
+	* stickynotes_applet.c: Remove use of gnome_client_*. See bug
+	562333.
+
 2009-01-15  Callum McKenzie  <callum@spooky-possum.org>
 
 	* stickynotes.c: We aren't using libgnomeui anymore. Bug 567775.
